--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <title>NoteVerse</title>
     <link rel="icon" href="./NoteVerse NV logo.png" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" />
     <meta
       name="description"
       content="Web site created using create-react-app"
